application.properties update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/questionenginedb
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
 spring.datasource.password=admin
 logging.level.pt.iscte.questionengine.services.QuestionGeneratorService=DEBUG
 server.error.include-message=always
-#submission.code=S12
+submission.code=S12
